# btllib

./: #meson.build#  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CITATION.cff  Doxyfile  LICENSE  README  README.md  azure-pipelines.yml  compile  compile-wrappers  conanfile.py  meson.build  paper.bib  paper.md
benchmarks/: Makefile  cbf_data.csv  gather-cbf-data  input_data.csv  join-cbf-logs  plot-cbf-data  plot-input-data  run-test-cbf  run-test-input  test_cbf.cpp  test_kseq.cpp  test_seqreader.cpp
docs/: aahash_8hpp_source.html  aahash__consts_8hpp_source.html  annotated.html  bloom__filter_8hpp_source.html  classbtllib_1_1AAHash-members.html  classbtllib_1_1AAHash.html  classbtllib_1_1Barrier-members.html  classbtllib_1_1Barrier.html  classbtllib_1_1BlindNtHash-members.html  classbtllib_1_1BlindNtHash.html  classbtllib_1_1BlindSeedNtHash-members.html  classbtllib_1_1BlindSeedNtHash.html  classbtllib_1_1BloomFilter-members.html  classbtllib_1_1BloomFilter.html  classbtllib_1_1CountingBloomFilter-members.html  classbtllib_1_1CountingBloomFilter.html  classbtllib_1_1Indexlr-members.html  classbtllib_1_1Indexlr.html  classbtllib_1_1Indexlr_1_1RecordIterator-members.html  classbtllib_1_1Indexlr_1_1RecordIterator.html  classbtllib_1_1KmerBloomFilter-members.html  classbtllib_1_1KmerBloomFilter.html  classbtllib_1_1KmerCountingBloomFilter-members.html  classbtllib_1_1KmerCountingBloomFilter.html  classbtllib_1_1MIBloomFilter-members.html  classbtllib_1_1MIBloomFilter.html  classbtllib_1_1NtHash-members.html  classbtllib_1_1NtHash.html  classbtllib_1_1OrderQueue-members.html  classbtllib_1_1OrderQueue.html  classbtllib_1_1ProcessPipeline-members.html  classbtllib_1_1ProcessPipeline.html  classbtllib_1_1RandSeq-members.html  classbtllib_1_1RandSeq.html  classbtllib_1_1RandomSequenceGenerator-members.html  classbtllib_1_1RandomSequenceGenerator.html  (+132 more)
extras/: meson.build  (+1 more)
extras/java/: Base.java  BlindNtHash.java  BloomFilter.java  CountingBloomFilter.java  CountingKmerSet.java  DataSink.java  DataSource.java  Edge.java  Graph.java  Indexlr.java  KmerBloomFilter.java  KmerCountingBloomFilter.java  KmerSet.java  NtHash.java  RollingHash.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_char.java  SWIGTYPE_p_f_p_q_const__char_int_mode_t__int.java  SWIGTYPE_p_f_p_q_const__char_int_v_______int.java  SWIGTYPE_p_f_p_q_const__char_mode_t__int.java  SWIGTYPE_p_f_p_q_const__char_p_q_const__char__p_FILE.java  SWIGTYPE_p_f_r_std__istream__r_std__istream.java  SWIGTYPE_p_mode_t.java  SWIGTYPE_p_ssize_t.java  SWIGTYPE_p_std__ios.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_std__string__allocator_type.java  SWIGTYPE_p_std__string__const_iterator.java  SWIGTYPE_p_std__string__const_reverse_iterator.java  SWIGTYPE_p_std__string__iterator.java  SWIGTYPE_p_std__string__reverse_iterator.java  SWIGTYPE_p_std__string__size_type.java  SWIGTYPE_p_std__vectorT_std__string_t.java  SaveloadOp.java  SeedBloomFilter.java  SeedNtHash.java  SeedRollingHash.java  SeqReader.java  SeqWriter.java  Sequence.java  (+20 more)
extras/python/: a.out  btl.cpp  btl.i  btl.py  btl_wrap.cxx  btllib.i  btllib.py  btllib_wrap.cxx  extra.i  gen.sh  meson.build  sequence.cpp  sequence.i
include/: basic_nt_sequence.h  basic_sequence.h  check.h  check.hpp  const_sequence.h  meson.build  nt_sequence.h  sequence.h  sequence.hpp  sequence_backup.h  sequence_reader.h  sequence_reader.hpp
include/btl/: graph.hpp  seq.hpp  seq_reader.hpp  status.hpp
include/btl/seq/: seq.hpp  seq_reader.hpp
include/btl/util/: status.hpp
include/btllib/: MIBloomFilter.hpp  aahash.hpp  aahash_consts.hpp  bloom_filter.hpp  counting_bloom_filter-inl.hpp  counting_bloom_filter.hpp  counting_bloom_filter.tpp  counting_kmer_set.hpp  cstring.hpp  data_saveload.hpp  data_stream.hpp  graph.hpp  hashing_internals.hpp  index_queue.hpp  indexlr.hpp  kmer_set.hpp  mi_bloom_filter-inl.hpp  mi_bloom_filter.hpp  mi_bloom_filter.tpp  nthash.hpp  nthash_consts.hpp  nthash_kmer.hpp  nthash_lowlevel.hpp  nthash_seed.hpp  num_queue.hpp  order_queue.hpp  phred_nthash.hpp  process_pipeline.hpp  random_seq_generator.hpp  randseq.hpp  rolling_hash.hpp  seq.hpp  seq_reader.hpp  seq_reader_faa_module.hpp  seq_reader_fasta_module.hpp  seq_reader_fastq_module.hpp  seq_reader_gfa2_module.hpp  seq_reader_multiline_faa_module.hpp  seq_reader_multiline_fasta_module.hpp  seq_reader_sam_module.hpp  (+3 more)
src/: meson.build  mi_bloom_filter.cpp
src/btllib/: aahash.cpp  bloom_filter.cpp  data_stream.cpp  hashing_internals.hpp  nthash.cpp  nthash_consts.cpp  nthash_kmer.cpp  nthash_lowlevel.cpp  nthash_seed.cpp  phred_nthash.cpp  process_pipeline.cpp  random_seq_generator.cpp  randseq.cpp  seq.cpp  seq_reader.cpp  seq_reader_faa_module.cpp  seq_reader_fasta_module.cpp  seq_reader_gfa2_module.cpp  seq_reader_multiline_faa_module.cpp  seq_reader_multiline_fasta_module.cpp  seq_reader_sam_module.cpp  seq_writer.cpp  status.cpp  util.cpp
tests/: aahash.cpp  bloom_filter.cpp  counting_bloom_filter.cpp  data_saveload.cpp  data_stream.cpp  helpers.hpp  indexlr.cpp  indexlr.quality.fq  indexlr.quality.fq.correct  indexlr.stlfr.fq  indexlr.stlfr.fq.correct  input.bam  input.fa  input.fa.gz.bz2  input.faa  input.fq  input.fq.tar.xz  input.sam  input_multiline.faa  kmer_set.cpp  large.bam  meson.build  mi_bloom_filter.cpp  nt_sequence1.cpp  nt_sequence2.cpp  nt_sequence3.cpp  nthash.cpp  phred_nthash.cpp  randseq.cpp  rolling_hash.cpp  seq_reader.cpp  seq_reader_faa_module.cpp  seq_reader_fasta_module.cpp  seq_reader_fastq_module.cpp  seq_reader_gfa2_module.cpp  seq_reader_multiline_faa_module.cpp  seq_reader_multiline_fasta_module.cpp  seq_writer.cpp  sequence1.cpp  sequence2.cpp  (+3 more)
tests/conan-test/: conanfile.py  meson.build
tests/conan-test/src/: main.cpp
tests/python/: single_seq.fa  test_aahash.py  test_bloom_filter.py  test_calc_phred_avg.py  test_counting_bloom_filter.py  test_indexlr.py  test_mi_bloom_filter.py  test_mibf.py  test_nthash.py  test_random_sequence_generator.py  test_seq_reader.py  test_seq_writer.py  tuplcyotlhxtsxvsugiqbvkmnayrsrlokjdulohatmapkwvgktjrrbigrlqbbkpl
(+163 files in other folders)
