# btllib_sources = ['btllib_wrap.cxx']

# btllib_py = static_library('btllib',
#                            btllib_sources,
#                            include_directories : btllib_include,
#                            dependencies : deps,
#                            install : true,
#                            install_dir : 'lib')